--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: NMJavalinTest
 author: ChimpGamer
 version: ${version}
-main: me.dunios.networkmanager.nmjavalintest.Main
+main: nl.chimpgamer.javalintest.MainBungee
